fix style for refering to equations

--- a/response/main.tex
+++ b/response/main.tex
@@ -69,6 +69,8 @@ we have obtained expressions for the utilities with noise.
 We have discussed several articles
 that have been proposed by the reviewer.
 
+\textbf{Regarding the comments of Reviewer 2:}
+
 \begin{verbatim}
     ``The structure despite having been improved quite a bit, still leaves something
     to be desired. For example, the contents of Section 1.2 were not fully moved
