--- a/diff.tex
+++ b/diff.tex
@@ -1,7 +1,7 @@
 \documentclass[fleqn,10pt]{wlscirep}
 %DIF LATEXDIFF DIFFERENCE FILE
 %DIF DEL old_main.tex   Tue Apr  7 15:05:05 2020
-%DIF ADD main.tex       Sun Sep 20 20:53:38 2020
+%DIF ADD main.tex       Sun Sep 20 21:10:20 2020
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[algoruled,lined]{algorithm2e}
@@ -239,12 +239,12 @@ In~\cite{Nowak1989} it was shown that it is not necessary to simulate the play
 of a strategy $p$ against a memory-one opponent $q$. Rather this exact behaviour
 can be modeled as a stochastic process, and more specifically as a Markov chain
 whose corresponding transition matrix \(M\) is
-given by Equation~\DIFdelbegin \DIFdel{(\ref{eq:transition_matrix})}\DIFdelend \DIFaddbegin \DIFadd{\ref{eq:transition_matrix}}\DIFaddend . The long run steady state probability
+given by Equation~(\ref{eq:transition_matrix}). The long run steady state probability
 vector \(v\), which is the solution to \(v M = v\), can be
-combined with the payoff matrices of Equation~\DIFdelbegin \DIFdel{(\ref{equ:pd_definition} ) }\DIFdelend \DIFaddbegin \DIFadd{\ref{equ:pd_definition} }\DIFaddend to give the expected
+combined with the payoff matrices of Equation~(\ref{equ:pd_definition}) to give the expected
 payoffs for each player. More specifically, the utility for a memory-one
 strategy \(p\) against an opponent \(q\), denoted as \(u_q(p)\), is given by
-Equation~\DIFdelbegin \DIFdel{(\ref{eq:press_dyson_utility})}\DIFdelend \DIFaddbegin \DIFadd{\ref{eq:press_dyson_utility}}\DIFaddend .
+Equation~(\ref{eq:press_dyson_utility}).
 
 \begin{equation}\label{eq:transition_matrix}
     \resizebox{.5\hsize}{!}{$\input{tex/m_matrix.tex}$}
@@ -314,7 +314,7 @@ against \(N\) opponents is given by:
        N (\frac{1}{2} p\bar{Q}^{(j)} p^T + \bar{c}^{(j)} p + \bar{a}^ {(j)})}{\prod\limits_{i=1} ^ N (\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)})}.
 \end{align}
 
-Equation~\DIFdelbegin \DIFdel{(\ref{eq:tournament_utility} ) }\DIFdelend \DIFaddbegin \DIFadd{\ref{eq:tournament_utility} }\DIFaddend is the average score (using Equation~\DIFdelbegin \DIFdel{(\ref{eq:optimisation_quadratic}) }\DIFdelend \DIFaddbegin \DIFadd{\ref{eq:optimisation_quadratic}}\DIFaddend ) against the set of opponents.
+Equation~(\ref{eq:tournament_utility}) is the average score (using Equation~(\ref{eq:optimisation_quadratic})) against the set of opponents.
 
 Estimating the utility of a memory-one strategy against any number of opponents
 without simulating the interactions is the main result used in the rest of this manuscript.
@@ -345,7 +345,7 @@ optimal points. This is also intuitive. The best response against a cooperator,
 \(p=(\frac{1}{2}, 0, 0, 0)\) and \(p=(\frac{1}{2}, 0, 0, \frac{1}{2})\) are also
 best responses. The approach taken here is to introduce a compact way of
 constructing the discrete candidate set of all local optimal points, and evaluating
-the objective function Equation~\DIFdelbegin \DIFdel{(\ref{eq:tournament_utility})}\DIFdelend \DIFaddbegin \DIFadd{\ref{eq:tournament_utility}}\DIFaddend . This gives the best
+the objective function Equation~(\ref{eq:tournament_utility}). This gives the best
 response memory-one strategy. The approach is given in
 Theorem~\ref{memone_group_best_response}.
 
@@ -653,7 +653,7 @@ that can occur, furthermore, Gambler also makes a probabilistic decision of
 cooperating in the opening move. Thus, Gambler is a function \(f: \{\text{C,
 D}\} \rightarrow [0, 1]_{\R}\). This can be hard coded as an element
 of \([0, 1]_{\R} ^ {16 + 1}\), one probability for each outcome plus the opening
-move. Hence, compared to Equation~\DIFdelbegin \DIFdel{(\ref{eq:mo_tournament_optimisation})}\DIFdelend \DIFaddbegin \DIFadd{\ref{eq:mo_tournament_optimisation}}\DIFaddend , finding an
+move. Hence, compared to Equation~(\ref{eq:mo_tournament_optimisation}), finding an
 optimal Gambler is a 17 dimensional problem given by:
 
 \begin{equation}\label{eq:gambler_optimisation}
@@ -664,12 +664,10 @@ optimal Gambler is a 17 dimensional problem given by:
     \end{aligned}
 \end{equation}
 
-Note that Equation \DIFdelbegin \DIFdel{~(\ref{eq:tournament_utility} ) }\DIFdelend \DIFaddbegin \DIFadd{\ref{eq:tournament_utility} }\DIFaddend can not be used here for the utility
+Note that Equation \DIFdelbegin \DIFdel{~}\DIFdelend (\ref{eq:tournament_utility}) can not be used here for the utility
 of Gambler, and actual simulated players are used. This is done using~\cite{axelrodproject}
-with 500 turns and 200 repetitions, moreover, Equation \DIFdelbegin \DIFdel{~(\ref{eq:gambler_optimisation}
-)
-}\DIFdelend \DIFaddbegin \DIFadd{\ref{eq:gambler_optimisation}
-}\DIFaddend is solved numerically using Bayesian optimisation.
+with 500 turns and 200 repetitions, moreover, Equation \DIFdelbegin \DIFdel{~}\DIFdelend (\ref{eq:gambler_optimisation})
+is solved numerically using Bayesian optimisation.
 
 Similarly to \DIFdelbegin \DIFdel{previous sections}\DIFdelend \DIFaddbegin \DIFadd{the previous section}\DIFaddend , a large data set has been generated with
 instances of an optimal Gambler and a memory-one best response, available
@@ -709,7 +707,7 @@ processes~\mbox{%DIFAUXCMD
 \cite{Knight2018}}\hspace{0pt}%DIFAUXCMD
 . This aspect of reinforcement learning can be done for
 best response memory-one strategies, as presented in this manuscript, by incorporating the strategy itself in the
-objective function as shown in Equation~\ref{eq:mo_tournament_optimisation}.
+objective function as shown in Equation~(\ref{eq:mo_tournament_optimisation}).
 Where \(K\) is the number of self interactions that will take place.
 }
 
@@ -781,7 +779,7 @@ the payoff matrix \(A ^ {(K)}\) where:
     }\item \DIFadd{\(A ^ {(K)}_{11}=u_{q}(q)\) is the long run utility of the opponent against itself.
 }\end{itemize}
 
-\DIFadd{The matrix \(A ^ {(K)}\) is calculated using Equation~\ref{eq:optimisation_quadratic}.
+\DIFadd{The matrix \(A ^ {(K)}\) is calculated using Equation~(\ref{eq:optimisation_quadratic}).
 For every value of \(K\) the best response dynamics algorithm
 (Algorithm~\ref{algo:best_response_dynamics})
 is used to
