--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,270 +1,137 @@
-@inproceedings{belkin2002using,
-  title={Using manifold stucture for partially labeled classification},
-  author={Belkin, Mikhail and Niyogi, Partha},
-  booktitle={Advances in neural information processing systems},
-  pages={929--936},
-  year={2002}
-}
-@article{Flood1958,
-author = {Merrill M. Flood},
+@ARTICLE{Flood1958,
+author = {Flood, M.~M. },
 title = {Some Experimental Games},
 journal = {Management Science},
 volume = {5},
-number = {1},
 pages = {5-26},
 year = {1958},
 doi = {10.1287/mnsc.5.1.5},
-URL = { https://doi.org/10.1287/mnsc.5.1.5},
-eprint = {https://doi.org/10.1287/mnsc.5.1.5}
 }
-@article{Axelrod1981,
-    author = {Axelrod, Robert and Hamilton, William D.},
+@ARTICLE{Axelrod1981,
+    author = {Axelrod, R. and Hamilton, W.~D.},
     title = {The evolution of cooperation},
     volume = {211},
-    number = {4489},
     pages = {1390--1396},
     year = {1981},
     doi = {10.1126/science.7466396},
-    publisher = {American Association for the Advancement of Science},
-    issn = {0036-8075},
-    URL = {http://science.sciencemag.org/content/211/4489/1390},
-    eprint = {http://science.sciencemag.org/content/211/4489/1390.full.pdf},
     journal = {Science}
 }
-@article{Axelrod1980a,
-    ISSN = {00220027, 15528766},
-    URL = {http://www.jstor.org/stable/173932},
-    author = {Axelrod, Robert},
-    journal = {The Journal of Conflict Resolution},
-    number = {1},
-    pages = {3-25},
-    publisher = {Sage Publications, Inc.},
-    title = {Effective Choice in the Prisoner's Dilemma},
-    volume = {24},
-    year = {1980}
-}
-@article{Axelrod1980b,
-    ISSN = {00220027, 15528766},
-    URL = {http://www.jstor.org/stable/173638},
-    author = {Axelrod, Robert},
-    journal = {The Journal of Conflict Resolution},
-    number = {3},
-    pages = {379-403},
-    publisher = {Sage Publications, Inc.},
-    title = {More Effective Choice in the Prisoner's Dilemma},
-    volume = {24},
-    year = {1980}
-}
-@article{Nowak1989,
+@ARTICLE{Nowak1989,
     title={Game-dynamical aspects of the prisoner's dilemma},
-    author={Nowak, Martin and Sigmund, Karl},
+    author={Nowak, M. and Sigmund, K.},
     journal={Applied Mathematics and Computation},
     volume={30},
-    number={3},
     pages={191--213},
     year={1989},
-    publisher={Elsevier}
+    doi={10.1016/0096-3003(89)90052-0}
 }
-@article{Nowak1990,
+@ARTICLE{Nowak1990,
     title={The evolution of stochastic strategies in the prisoner's dilemma},
-    author={Nowak, Martin and Sigmund, Karl},
+    author={Nowak, M. and Sigmund, K.},
     journal={Acta Applicandae Mathematicae},
     volume={20},
-    number={3},
     pages={247--265},
     year={1990},
-    publisher={Springer}
+    doi={10.1007/BF00049570}
 }
-@article{Nowak1993,
+@ARTICLE{Nowak1993,
   title={A strategy of win-stay, lose-shift that outperforms tit-for-tat in the Prisoner's Dilemma game},
-  author={Nowak, Martin and Sigmund, Karl},
+  author={Nowak, M. and Sigmund, K.},
   journal={Nature},
   volume={364},
-  number={6432},
   pages={56},
   year={1993},
-  publisher={Nature Publishing Group}
+  doi={10.1038/364056a0}
 }
-@article{Stewart2012,
-    author = {Stewart, Alexander J. and Plotkin, Joshua B.},
+@ARTICLE{Stewart2012,
+    author = {Stewart, A.~J. and Plotkin, J.~B.},
     title = {Extortion and cooperation in the Prisoner’s Dilemma},
     volume = {109},
-    number = {26},
     pages = {10134-10135},
     year = {2012},
     doi = {10.1073/pnas.1208087109},
-    URL = {http://www.pnas.org/content/109/26/10134.short},
-    eprint = {http://www.pnas.org/content/109/26/10134.full.pdf},
-    journal = {Proceedings of the National Academy of Sciences}
+    journal={Proceedings of the National Academy of Sciences}
 }
-@article{Press2012,
-    author = {Press, William H. and Dyson, Freeman J.},
+@ARTICLE{Press2012,
+    author = {Press, W.~H. and Dyson, F.~J.},
     title = {Iterated Prisoner’s Dilemma contains strategies that dominate any 
     evolutionary opponent},
     volume = {109},
-    number = {26},
     pages = {10409-10413},
     year = {2012},
     doi = {10.1073/pnas.1206569109},
-    URL = {http://www.pnas.org/content/109/26/10409.abstract},
-    eprint = {http://www.pnas.org/content/109/26/10409.full.pdf},
-    journal = {Proceedings of the National Academy of Sciences}
+    journal={Proceedings of the National Academy of Sciences},
 }
 
-@article{Harper2015,
-    author = {Lee, Christopher and Harper, Marc and Fryer, Dashiell},
+@ARTICLE{Harper2015,
+    author = {Lee, C. and Harper, M. and Fryer, D.},
     journal = {PLOS ONE},
-    publisher = {Public Library of Science},
     title = {The Art of War: Beyond Memory-one Strategies in Population Games},
     year = {2015},
     month = {03},
     volume = {10},
-    url = {https://doi.org/10.1371/journal.pone.0120625},
-    pages = {1-16}, 
-    number = {3},
+    pages = {1-16},
     doi = {10.1371/journal.pone.0120625}
 }
-@article{Knight2018,
-    author = {Knight, Vincent and Harper, Marc and Glynatsi, Nikoleta E. and Campbell, Owen},
+@ARTICLE{Knight2018,
+    author = {Knight, V. and Harper, M. and Glynatsi, N.~E. and Campbell, O.},
     journal = {PLOS ONE},
-    publisher = {Public Library of Science},
     title = {Evolution reinforces cooperation with the emergence of self-recognition mechanisms: An empirical study of strategies in the Moran process for the iterated prisoner’s dilemma},
     year = {2018},
-    month = {10},
     volume = {13},
-    url = {https://doi.org/10.1371/journal.pone.0204981},
     pages = {1-33},
-    number = {10},
     doi = {10.1371/journal.pone.0204981}
 }
-@article{adami2013,
+@ARTICLE{adami2013,
   title={Evolutionary instability of zero-determinant strategies demonstrates that winning is not everything},
-  author={Adami, Christoph and Hintze, Arend},
-  journal={Nature communications},
+  author={Adami, C. and Hintze, A.},
+  journal={Nature Communications},
   volume={4},
   pages={2193},
   year={2013},
   publisher={Nature Publishing Group}
 }
-@article{Hilbe2015,
+@ARTICLE{Hilbe2015,
 title = "Partners or rivals? Strategies for the iterated prisoner's dilemma",
 journal = "Games and Economic Behavior",
 volume = "92",
 pages = "41 - 52",
 year = "2015",
-issn = "0899-8256",
-doi = "https://doi.org/10.1016/j.geb.2015.05.005",
-url = "http://www.sciencedirect.com/science/article/pii/S0899825615000822",
-author = "Hilbe, Christian and Traulsen, Arne and Sigmund, Karl",
+doi = "10.1016/j.geb.2015.05.005",
+author = "Hilbe, C. and Traulsen, A. and Sigmund, K.",
 }
-@article{Hilbe2013b,
+@ARTICLE{Hilbe2013b,
   title={Evolution of extortion in iterated prisoner’s dilemma games},
-  author={Hilbe, Christian and Nowak, Martin and Sigmund, Karl},
+  author={Hilbe, C. and Nowak, M. and Sigmund, K.},
   journal={Proceedings of the National Academy of Sciences},
-  pages={201214834},
+  pages={6913--6918},
   year={2013},
-  publisher={National Acad Sciences}
+  doi={10.1073/pnas.1214834110}
 }
-@article{Hilbe2013,
-    author = {Hilbe, Christian and Nowak, Martin and Traulsen, Arne},
+@ARTICLE{Hilbe2013,
+    author = {Hilbe, C. and Nowak, M. and Traulsen, A.},
     journal = {PLOS ONE},
-    publisher = {Public Library of Science},
     title = {Adaptive Dynamics of Extortion and Compliance},
     year = {2013},
-    month = {11},
     volume = {8},
-    url = {https://doi.org/10.1371/journal.pone.0077886},
     pages = {1-9},
-    number = {11},
     doi = {10.1371/journal.pone.0077886}
 }
 @book{kepner2011,
   title={Graph algorithms in the language of linear algebra},
-  author={Kepner, Jeremy and Gilbert, John},
+  author={Kepner, J. and Gilbert, J.},
   year={2011},
   publisher={SIAM}
 }
-@misc{axelrodproject,
-  author       = {{ {The Axelrod project developers} }},
+@MISC{axelrodproject,
+  author       = {{The Axelrod project developers}},
   title        = {Axelrod: 4.4.0},
-  month        = apr,
   year         = 2016,
-  doi          = {10.5281/zenodo.1476181},
-  url          = {http://dx.doi.org/10.5281/zenodo.<DOI NUMBER>}
+  howpublished = {\emph{Zenodo} \url{https://doi.org/10.5281/zenodo.1168078}}
 }
-@article{Knight2016,
-archivePrefix = {arXiv},
-arxivId = {1604.00896},
-author = {Knight, Vincent and Campbell, Owen and Harper, Marc and Langner, Karol and Campbell, James and Campbell, Thomas and Carney, Alex and Chorley, Martin and Davidson-Pilon, Cameron and Glass, Kristian and Ehrlich, Tom{\'{a}}{\v{s}} and Jones, Martin and Koutsovoulos, Georgios and Tibble, Holly and Jochen, M{\"{u}}ller and Palmer, Geraint and Slavin, Paul and Standen, Timothy and Visintini, Luis and Molden, Karl},
-eprint = {1604.00896},
-file = {::},
-number = {1},
-title = {{An open reproducible framework for the study of the iterated prisoner's dilemma}},
-url = {http://arxiv.org/abs/1604.00896},
-volume = {1},
-year = {2016}
-}
-@book{Tadelis2013,
-  title={Game theory: an introduction},
-  author={Tadelis, Steve},
-  year={2013},
-  publisher={Princeton University Press}
-}
-@article{Hongyan2014,
-author = {Cai, Hongyan and Wang, Yanfei and Yi, Tao},
-title = {An approach for minimizing a quadratically constrained fractional 
-quadratic problem with application to the communications over wireless channels
-},
-journal = {Optimization Methods and Software},
-volume = {29},
-number = {2},
-pages = {310-320},
-year = {2014},
-doi = {10.1080/10556788.2012.711330},
-URL = {http://dx.doi.org/10.1080/10556788.2012.711330},
-eprint = {http://dx.doi.org/10.1080/10556788.2012.711330}
-}
-@article{Beck2009,
-author="Beck, Amir
-and Teboulle, Marc",
-title="A convex optimization approach for minimizing the ratio of indefinite 
-quadratic functions over an ellipsoid",
-journal="Mathematical Programming",
-year="2009",
-volume="118",
-number="1",
-pages="13--35",
-issn="1436-4646",
-doi="10.1007/s10107-007-0181-x",
-url="http://dx.doi.org/10.1007/s10107-007-0181-x"
-}
-@book{bertsekas2014,
-  title={Constrained optimization and Lagrange multiplier methods},
-  author={Bertsekas, Dimitri P},
-  year={2014},
-  publisher={Academic press}
-}
-@article{Giorgi2016,
- author = {Giorgi, Giorgio and Jim{\'e}nez, Bienvenido and Novo, Vicente},
- title = {Approximate Karush---Kuhn---Tucker Condition in Multiobjective Optimization},
- journal = {J. Optim. Theory Appl.},
- issue_date = {October   2016},
- volume = {171},
- number = {1},
- month = oct,
- year = {2016},
- issn = {0022-3239},
- pages = {70--89},
- numpages = {20},
- url = {http://dx.doi.org/10.1007/s10957-016-0986-y},
- doi = {10.1007/s10957-016-0986-y},
- acmid = {3001290},
- publisher = {Plenum Press},
- address = {New York, NY, USA},
-}
-@article{Jonsson2005,
+@ARTICLE{Jonsson2005,
   title={Accurate solution of polynomial equations using Macaulay resultant matrices},
-  author={Jonsson, Gubjorn and Vavasis, Stephen},
+  author={Jonsson, G. and Vavasis, S.},
   journal={Mathematics of computation},
   volume={74},
   number={249},
@@ -274,51 +141,26 @@ url="http://dx.doi.org/10.1007/s10107-007-0181-x"
 @InProceedings{Mokus1978,
 author="Mo{\v{c}}kus, J.",
 title="On bayesian methods for seeking the extremum",
-booktitle="Optimization Techniques IFIP Technical Conference Novosibirsk, July 1--7, 1974",
+booktitle="Optimization Techniques IFIP Technical Conference Novosibirsk",
 year="1975",
 publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
 pages="400--404",
-isbn="978-3-540-37497-8"
 }
-@article{Jones2001,
-  title={A taxonomy of global optimization methods based on response surfaces},
-  author={Jones, Donald R},
-  journal={Journal of global optimization},
-  volume={21},
-  number={4},
-  pages={345--383},
-  year={2001},
-  publisher={Springer}
-}
-@article{Storn1997,
-  title={Differential evolution--a simple and efficient heuristic for global optimization over continuous spaces},
-  author={Storn, Rainer and Price, Kenneth},
-  journal={Journal of global optimization},
-  volume={11},
-  number={4},
-  pages={341--359},
-  year={1997},
-  publisher={Springer}
-}
-@article{Harper2017,
-    author = {Harper, Marc and Knight, Vincent and Jones, Martin and Koutsovoulos, Georgios and Glynatsi, Nikoleta E. and Campbell, Owen},
+@ARTICLE{Harper2017,
+    author = {Harper, M. and Knight, V. and Jones, M. and Koutsovoulos, G. and Glynatsi, N.~E. and Campbell, O.},
     journal = {PLOS ONE},
-    publisher = {Public Library of Science},
     title = {Reinforcement learning produces dominant strategies for the Iterated Prisoner’s Dilemma},
     year = {2017},
-    month = {12},
     volume = {12},
-    url = {https://doi.org/10.1371/journal.pone.0188046},
     pages = {1-33},
-    number = {12},
     doi = {10.1371/journal.pone.0188046}
 }
+
 @misc{tim_head_2018_1207017,
-  author       = {Tim Head and
+  author       = {Head T. and
                   MechCoder and
-                  Gilles Louppe and
-                  Iaroslav Shcherbatyi and
+                  Louppe G. and
+                  Shcherbatyi I. and
                   fcharras and
                   Zé Vinícius and
                   cmmalone and
@@ -346,24 +188,21 @@ isbn="978-3-540-37497-8"
                   Andreas Mueller and
                   Alexander Fabisch},
   title        = {scikit-optimize/scikit-optimize: v0.5.2},
-  month        = mar,
   year         = 2018,
-  doi          = {10.5281/zenodo.1207017},
-  url          = {https://doi.org/10.5281/zenodo.1207017}
+  howpublished = {\emph{Zenodo} \url{https://doi.org/10.5281/zenodo.1207017}}
 }
-@article{hunter2007matplotlib,
+@ARTICLE{hunter2007matplotlib,
   title = {{Matplotlib: A 2D graphics environment}},
-  author = {Hunter, John D.},
+  author = {Hunter, J.~D.},
   journal = {Computing In Science \& Engineering},
   volume = {9},
-  number = {3},
   pages = {90--95},
   year = {2007},
-  publisher = {IEEE}
+  doi={10.1109/MCSE.2007.55}
 }
-@article{sympy,
+@ARTICLE{sympy,
   title = {SymPy: symbolic computing in Python},
-  author = {Meurer, Aaron and Smith, Christopher and Paprocki, Mateusz and
+  author = {Meurer, A. and Smith, C. and Paprocki, M. and
   Čertík, Ondřej and Kirpichev, Sergey and Rocklin, Matthew and Kumar, AMiT and
   Ivanov, Sergiu and Moore, Jason and Singh, Sartaj and Rathnayake, Thilina and
   Vig, Sean and Granger, Brian and Muller, Richard and Bonazzi, Francesco and
@@ -372,283 +211,169 @@ isbn="978-3-540-37497-8"
   year = 2017,
   volume = 3,
   journal = {PeerJ Computer Science},
-  issn = {2376-5992},
-  url = {https://doi.org/10.7717/peerj-cs.103},
   doi = {10.7717/peerj-cs.103}
 }
-@article{walt2011numpy,
+@ARTICLE{walt2011numpy,
   title = {{The NumPy array: a structure for efficient numerical computation}},
-  author = {Van Der Walt, Stefan and Colbert, S. Chris and Varoquaux, Gael},
+  author = {Van Der Walt, S. and Colbert, S.~C. and Varoquaux, G.},
   journal = {Computing in Science \& Engineering},
   volume = {13},
   number = {2},
   pages = {22--30},
   year = {2011},
-  publisher = {IEEE}
+  doi={10.1109/MCSE.2011.37}
 }
-@book{Anton2014,
-  added-at = {2016-05-31T10:53:16.000+0200},
-  author = {Anton, Howard and Rorres, Chris},
-  biburl = {https://www.bibsonomy.org/bibtex/23d125adef6e8701a7dce93bdc817f3bc/ytyoun},
-  edition = {Eleventh},
-  interhash = {661a46a89feed199e73bf45361ebae37},
-  intrahash = {3d125adef6e8701a7dce93bdc817f3bc},
-  isbn = {9781118434413 1118434412 9781118474228 1118474228},
-  keywords = {linear.algebra matrix textbook},
-  publisher = {Wiley},
-  refid = {856647689},
-  timestamp = {2016-05-31T13:03:34.000+0200},
-  title = {Elementary Linear Algebra: Applications Version},
-  year = 2014
-}
-@article{Matsui1992,
-title = "Best response dynamics and socially stable strategies",
-journal = "Journal of Economic Theory",
-volume = "57",
-number = "2",
-pages = "343 - 362",
-year = "1992",
-issn = "0022-0531",
-doi = "https://doi.org/10.1016/0022-0531(92)90040-O",
-url = "http://www.sciencedirect.com/science/article/pii/002205319290040O",
-author = "Matsui, Akihiko",
-}
-@article{Benureau2018,
+
+@ARTICLE{Benureau2018,
   title={Re-run, repeat, reproduce, reuse, replicate: transforming code into scientific contributions},
-  author={Benureau, Fabien CY and Rougier, Nicolas P},
+  author={Benureau, F.~CY. and Rougier, N.~P.},
   journal={Frontiers in neuroinformatics},
   volume={11},
   pages={69},
   year={2018},
-  publisher={Frontiers}
+  doi={10.3389/fninf.2017.00069}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@misc{glynatsi2019,
-  author       = {Nikoleta E. Glynatsi and
-                  Vincent A. Glynatsi},
+@MISC{glynatsi2019,
+  author       = {Glynatsi, N.~E. and
+                  Knight, V.~A.},
   title        = {{Raw data for: "A theory of mind. Best responses to 
                    memory-one strategies. The limitations of
                    extortion and restricted memory."}},
-  month        = sep,
   year         = 2019,
-  publisher    = {Zenodo},
   version      = {1.0.0},
-  doi          = {10.5281/zenodo.3533094},
-  howpublished          = {https://doi.org/10.5281/zenodo.3533094}
+  howpublished = {\emph{Zenodo} \url{https://doi.org/10.5281/zenodo.3533094}}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%PRE PRINT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@article{Knight2019,
-  author    = {Knight, Vincent A. and
-               Harper, Marc and
-               Glynatsi, Nikoleta E. and
-               Gillard, Jonathan},
+@MISC{Knight2019,
+  author    = {Knight, V.~A. and
+               Harper, M. and
+               Glynatsi, N.~E. and
+               Gillard, J.},
   title     = {Recognising and evaluating the effectiveness of extortion in the Iterated
                Prisoner's Dilemma},
-  journal   = {CoRR},
-  volume    = {abs/1904.00973},
-  year      = {2019},
-  url       = {http://arxiv.org/abs/1904.00973},
-  archivePrefix = {arXiv},
-  eprint    = {1904.00973},
-  timestamp = {Wed, 24 Apr 2019 12:21:25 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1904-00973},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  howpublished={\emph{Preprint at} \url{https://arxiv.org/abs/1904.00973}},
+  year={2019}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOFTWARE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@article{nikoleta_glynatsi_2019,
-  author       = {Nikoleta E. Glynatsi and
-                  Vince Knight},
+@MISC{opt_mo2019,
+  author       = {Glynatsi, N.~E. and
+                  Knight, V.~A.},
   title        = {{Nikoleta-v3/Memory-size-in-the-prisoners-dilemma: 
                    initial release}},
-  month        = nov,
   year         = 2019,
-  publisher    = {Zenodo},
   version      = {0.0.1},
-  doi          = {10.5281/zenodo.3533146},
-  howpublished = {https://doi.org/10.5281/zenodo.3533146}
-}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SIMILAR WORKS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@article{Hilbe2017,
-  title={Memory-n strategies of direct reciprocity},
-  author={Hilbe, Christian and Martinez-Vaquero, Luis A and Chatterjee, Krishnendu and Nowak, Martin A},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={114},
-  number={18},
-  pages={4715--4720},
-  year={2017},
-  publisher={National Acad Sciences}
-}
-@article{Stewart2016,
-  title={Small groups and long memories promote cooperation},
-  author={Stewart, Alexander J and Plotkin, Joshua B},
-  journal={Scientific reports},
-  volume={6},
-  pages={26889},
-  year={2016},
-  publisher={Nature Publishing Group}
-}
-@article{Pan2015,
-  title={Zero-determinant strategies in iterated public goods game},
-  author={Pan, Liming and Hao, Dong and Rong, Zhihai and Zhou, Tao},
-  journal={Scientific reports},
-  volume={5},
-  pages={13096},
-  year={2015},
-  publisher={Nature Publishing Group}
-}
-@article{Stewart2013,
-  title={From extortion to generosity, evolution in the iterated prisoner’s dilemma},
-  author={Stewart, Alexander J and Plotkin, Joshua B},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={110},
-  number={38},
-  pages={15348--15353},
-  year={2013},
-  publisher={National Acad Sciences}
+  howpublished = {\emph{Zenodo} \url{https://doi.org/10.5281/zenodo.3533146}}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DERIVATIVE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @book{Abadir2005,
   title={Matrix algebra},
-  author={Abadir, Karim M and Magnus, Jan R},
+  author={Abadir, K.~M. and Magnus, J.~R.},
   volume={1},
   year={2005},
   publisher={Cambridge University Press}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@article{Hilbe2018,
+@ARTICLE{Hilbe2018,
   title={Partners and rivals in direct reciprocity},
-  author={Hilbe, Christian and Chatterjee, Krishnendu and Nowak, Martin A},
-  journal={Nature human behaviour},
+  author={Hilbe, C. and Chatterjee, K. and Nowak, M.~A.},
+  journal={Nature Human Behaviour},
   volume={2},
-  number={7},
   pages={469--477},
   year={2018},
-  publisher={Nature Publishing Group}
+  doi={10.1038/s41562-018-0320-9}
 }
 
 @book{nowak2006evolutionary,
    title={Evolutionary dynamics: exploring the equations of life},
-   author={Nowak, Martin A},
+   author={Nowak, M.~A.},
    year={2006},
-   publisher={Harvard university press}
+   publisher={Harvard University Press}
  }
-%%%%THEORY OF MIND DEFITION%%%%%
-@article{Premack1978,
-  title={Does the chimpanzee have a theory of mind?},
-  author={Premack, David and Woodruff, Guy},
-  journal={Behavioral and brain sciences},
-  volume={1},
-  number={4},
-  pages={515--526},
-  year={1978},
-  publisher={Cambridge University Press}
-}
-@misc{Saxe2006,
-  title={The neuroscience of theory of mind},
-  author={Saxe, Rebecca and Baron-Cohen, Simon},
-  year={2006},
-  publisher={Taylor \& Francis}
-}
-@article{Wellman2011,
-  title={Developing a theory of mind.},
-  author={Wellman, Henry M},
-  year={2011},
-  publisher={Wiley-Blackwell}
-}
 %%%%%%%MANUSCRIPTS PROPOSED BY REVIEWER%%%%%%%%%%%
-@article{Han2011,
+@ARTICLE{Han2011,
   title={Intention recognition promotes the emergence of cooperation},
-  author={Han The Anh and Moniz Pereira, Lu{\'\i}s and Santos, Francisco C},
+  author={Han, T.~A. and Pereira, L.~M. and Santos, F.~C.},
   journal={Adaptive Behavior},
   volume={19},
-  number={4},
   pages={264--279},
   year={2011},
-  publisher={Sage Publications Sage UK: London, England}
+  doi={10.1177/1059712311410896}
 }
-@article{Han2012,
+@ARTICLE{Han2012,
   title={Corpus-based intention recognition in cooperation dilemmas},
-  author={Han, The Anh and Pereira, Luis Moniz and Santos, Francisco C},
+  author={Han, T.~A. and Pereira, L.~M. and Santos, F.~C.},
   journal={Artificial Life},
-  volume={18},
   number={4},
   pages={365--383},
   year={2012},
-  publisher={MIT Press}
+  doi={10.1162/ARTL_a_00072}
 }
-@article{Devaine2014,
+@ARTICLE{Devaine2014,
   title={Theory of mind: did evolution fool us?},
-  author={Devaine, Marie and Hollard, Guillaume and Daunizeau, Jean},
+  author={Devaine, M. and Hollard, G. and Daunizeau, J.},
   journal={PloS One},
   volume={9},
-  number={2},
   pages={e87619},
   year={2014},
-  publisher={Public Library of Science}
+  doi={10.1371/journal.pone.0087619}
 }
-@article{De2013,
+@ARTICLE{De2013,
   title={How much does it help to know what she knows you know? An agent-based simulation study},
-  author={De Weerd, Harmen and Verbrugge, Rineke and Verheij, Bart},
+  author={De Weerd, H. and Verbrugge, R. and Verheij, B.},
   journal={Artificial Intelligence},
   volume={199},
   pages={67--92},
   year={2013},
-  publisher={Elsevier}
+  doi={10.1016/j.artint.2013.05.004}
 }
-@article{Han2015,
+@ARTICLE{Han2015,
   title={Synergy between intention recognition and commitments in cooperation dilemmas},
-  author={Han, The Anh and Santos, Francisco C and Lenaerts, Tom and Pereira, Luis Moniz},
+  author={Han, T.~A. and Santos, F.~C. and Lenaerts, T. and Pereira, L.~M.},
   journal={Scientific reports},
   volume={5},
   pages={9312},
   year={2015},
-  publisher={Nature Publishing Group}
 }
 
-@article{Imhof2007,
+@ARTICLE{Imhof2007,
   title={Tit-for-tat or win-stay, lose-shift?},
-  author={Imhof, Lorens A and Fudenberg, Drew and Nowak, Martin A},
-  journal={Journal of theoretical biology},
+  author={Imhof, L.~A. and Fudenberg, D. and Nowak, M. A.},
+  journal={Journal of Theoretical Biology},
   volume={247},
-  number={3},
   pages={574--580},
   year={2007},
-  publisher={Elsevier}
+  doi={10.1016/j.jtbi.2007.03.027}
 }
 
-@article{Boyd1989,
+@ARTICLE{Boyd1989,
   title={Mistakes allow evolutionary stability in the repeated prisoner's dilemma game},
-  author={Boyd, Robert},
-  journal={Journal of theoretical Biology},
+  author={Boyd, R.},
+  journal={Journal of Theoretical Biology},
   volume={136},
-  number={1},
   pages={47--56},
   year={1989},
-  publisher={Elsevier}
+  doi={10.1016/s0022-5193(89)80188-2}
 }
 
-@article{Wu1995,
+@ARTICLE{Wu1995,
   title={How to cope with noise in the iterated prisoner's dilemma},
-  author={Wu, Jianzhong and Axelrod, Robert},
-  journal={Journal of Conflict resolution},
+  author={Wu, J. and Axelrod, R.},
+  journal={Journal of Conflict Resolution},
   volume={39},
-  number={1},
   pages={183--189},
   year={1995},
-  publisher={Sage Periodicals Press 2455 Teller Road, Thousand Oaks, CA 91320}
+  doi={10.1177/0022002795039001008}
 }
 
 @misc{nikoleta_glynatsi_2020,
-  author       = {Nikoleta Glynatsi and
-                  Vincent A. Knight},
+  author       = {Glynatsi, N.~E. and
+                  Knight, V.~A.},
   title        = {{Raw data Moran Experiments: "A theory of mind. 
                    Best responses to memory-one strategies. The
                    limitations of extortion and restricted memory"}},
-  month        = sep,
   year         = 2020,
-  publisher    = {Zenodo},
   version      = {1.0.0},
-  doi          = {10.5281/zenodo.4036427},
-  howpublished          = {https://doi.org/10.5281/zenodo.4036427}
+  howpublished = {\emph{Zenodo} \url{https://doi.org/10.5281/zenodo.4036427}}
 }
