change manuscript title to Using a theory of mind to find best responses to memory-one strategies.

--- a/diff.tex
+++ b/diff.tex
@@ -1,7 +1,7 @@
 \documentclass[fleqn,10pt]{wlscirep}
 %DIF LATEXDIFF DIFFERENCE FILE
 %DIF DEL old_main.tex   Tue Apr  7 15:05:05 2020
-%DIF ADD main.tex       Sun Sep 20 21:10:20 2020
+%DIF ADD main.tex       Tue Sep 22 11:35:48 2020
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[algoruled,lined]{algorithm2e}
@@ -11,27 +11,29 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}[theorem]{Lemma}
 
-%DIF 11-14d11
+%DIF 11-13c11
 %DIF < \newcommand{\figureacknowledgement}{Source code and package information for
 %DIF < generating this figure are discussed in the acknowledgements, and are available
 %DIF < at~\cite{nikoleta_glynatsi_2019}.}
-%DIF < 
 %DIF -------
-\title{A theory of mind: Best responses to memory-one strategies. The limitations
-of extortion and restricted memory}
+\title{Using a theory of mind to find best responses to memory-one strategies.} %DIF > 
+%DIF -------
 
-%DIF 18c14
+%DIF 15-18c13
+%DIF < \title{A theory of mind: Best responses to memory-one strategies. The limitations
+%DIF < of extortion and restricted memory}
+%DIF < 
 %DIF < \author[1,*]{Nikoleta E. Glynatsi}
 %DIF -------
 \author[1,2,*]{Nikoleta E. Glynatsi} %DIF > 
 %DIF -------
 \author[1]{Vincent A. Knight}
 \affil[1]{Cardiff University, School of Mathematics, Cardiff, CF24 4AG, United Kingdom}
-%DIF 21a17
+%DIF 21a16
 \affil[2]{Max Planck Institute for Evolutionary Biology, Pl\"{o}n, 24 306, Germany} %DIF > 
 %DIF -------
 
-%DIF 22c19
+%DIF 22c18
 %DIF < \affil[*]{glynatsine@cardiff.ac.uk}
 %DIF -------
 \affil[*]{glynatsi@evolbio.mpg.de} %DIF > 
@@ -44,7 +46,7 @@ of extortion and restricted memory}
 \begin{abstract}
 Memory-one strategies are a set of Iterated Prisoner's Dilemma strategies
 that have been praised for their mathematical tractability and performance
-%DIF 31-33c28-30
+%DIF 31-33c27-29
 %DIF < against single opponents. This manuscript investigates a theory of mind: \textit{best
 %DIF < response} memory-one strategies, as a multidimensional
 %DIF < optimisation problem. We add to the literature that has shown that
@@ -55,7 +57,7 @@ their opponents. The results add to the literature that has shown that %DIF >
 %DIF -------
 extortionate play is not always optimal by showing that optimal play is
 often not extortionate.
-%DIF 36c33
+%DIF 36c32
 %DIF < We
 %DIF -------
 They %DIF > 
@@ -63,7 +65,7 @@ They %DIF >
 also provide evidence that memory-one strategies suffer from their limited
 memory in multi agent interactions and can be out performed by
 optimised strategies with longer memory.
-%DIF 40a37-42
+%DIF 40a36-41
 We have developed a theory that has allowed to explore the entire %DIF > 
 space of memory-one strategies. The framework presented is suitable to %DIF > 
 study memory-one strategies in the Prisoner's Dilemma, but also %DIF > 
