--- a/main.tex
+++ b/main.tex
@@ -38,8 +38,7 @@
 \newtheorem{lemma}[theorem]{Lemma}
 \def\arraystretch{1.5}
 
-\title{A theory of mind: Best responses to memory-one strategies. The limitations
-of extortion and restricted memory.}
+\title{Using a theory of mind to find best responses to memory-one strategies.}
 \author[1, 2, *]{Nikoleta E. Glynatsi}
 \author[1]{Vincent A. Knight}
 
