--- a/response/cover_letter.tex
+++ b/response/cover_letter.tex
@@ -4,8 +4,7 @@
 \setlength{\parskip}{1em}
 \usepackage{authblk}
 
-\title{A theory of mind: Best responses to memory-one strategies. The limitations
-of extortion and restricted memory.}
+\title{Using a theory of mind to find best responses to memory-one strategies.}
 
 \author{Nikoleta E. Glynatsi, Vincent A. Knight}
 
