--- a/template_submissions_to_scientific_reports/main.tex
+++ b/template_submissions_to_scientific_reports/main.tex
@@ -8,8 +8,7 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}[theorem]{Lemma}
 
-\title{A theory of mind: Best responses to memory-one strategies. The limitations
-of extortion and restricted memory}
+\title{Using a theory of mind to find best responses to memory-one strategies.}
 
 \author[1,2,*]{Nikoleta E. Glynatsi}
 \author[1]{Vincent A. Knight}
