--- a/template_submissions_to_scientific_reports/supplementary_information.tex
+++ b/template_submissions_to_scientific_reports/supplementary_information.tex
@@ -20,8 +20,7 @@
 \usepackage{authblk}
 
 
-\title{Supplementary Information: A theory of mind: Best responses to memory-one strategies. The limitations
-of extortion and restricted memory}
+\title{Supplementary Information: Using a theory of mind to find best responses to memory-one strategies.}
 
 \author[1,2,*]{Nikoleta E. Glynatsi}
 \author[1]{Vincent A. Knight}
