--- a/response/main.tex
+++ b/response/main.tex
@@ -5,8 +5,7 @@
 \usepackage{authblk}
 \usepackage{pdfpages}
 
-\title{A theory of mind: Best responses to memory-one strategies. The limitations
-of extortion and restricted memory.}
+\title{Using a theory of mind to find best responses to memory-one strategies.}
 
 \author{Nikoleta E. Glynatsi, Vincent A. Knight}
 
